# oop_lab4

./: CMakeLists.txt  main.cpp
include/: array.h  rectangle.h  triangle.h
test/: tests4.cpp
